--- a/doc/.htaccess
+++ b/doc/.htaccess
@@ -4,5 +4,6 @@ Options +FollowSymlinks
 RewriteEngine on
 RewriteRule ^pages/articles/([^/]+) /index.html?action=index&view=article&id=$1 [NC]
 RewriteRule ^pages/misc/([^/]+) /index.html?action=pages&view=$1 [NC]
-RewriteRule ^pages/([^/]+)/([^/]+) /index.html?action=$2&view=$1 [NC]
+RewriteRule ^pages/([^/]+)/([^/]+)/?(.*) /index.html?action=$2&view=$1&parameters=$3 [NC]
 RewriteRule ^projects/([^/]+) /index.html?action=projects&view=$1 [NC]
+RewriteRule ^rss.xml /index.html?view=rss&action=all [NC]
